--- a/package.json
+++ b/package.json
@@ -29,7 +29,14 @@
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.30.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
