--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.6.1",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
+    "socket.io-client": "^4.6.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
