--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "axios": "^1.2.2",
     "formik": "^2.2.9",
+    "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
